--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
   "name": "portfolio",
   "private": true,
+  "homepage": "https://BohdanKrav4enko.github.io/Portfolio",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "pnpm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@types/react-scroll": "^1.8.10",
     "@types/styled-components": "^5.1.34",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.14"
+    "react-parallax-tilt": "^1.7.274",
+    "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.14",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
